--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.59.2",
     "slate": "^0.91.4",
     "slate-react": "^0.91.10",
     "typescript": "^4.9.5",
